[gd_scene load_steps=4 format=3 uid="uid://0drbhprmdkd0"]

[ext_resource type="Script" path="res://Game/Themes/Retro/bucket.gd" id="1_rdefd"]
[ext_resource type="PackedScene" uid="uid://cjtvd5nvtrb50" path="res://Game/Themes/Retro/bucket_part.tscn" id="2_xoic0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1jdky"]
radius = 11.0454

[node name="Bucket" type="CharacterBody2D"]
z_index = 1
position = Vector2(0, -36)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_rdefd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 36)
shape = SubResource("CircleShape2D_1jdky")

[node name="TopBucket" parent="." instance=ExtResource("2_xoic0")]

[node name="MiddleBucket" parent="." instance=ExtResource("2_xoic0")]
position = Vector2(0, 36)

[node name="BottomBucket" parent="." instance=ExtResource("2_xoic0")]
position = Vector2(0, 72)
